Fixed the length issue, now it changes shape as soon as the user starts to scroll

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 		<script src="js/modernizr.custom.js"></script>
 	</head>
 	<body>
+		<!-- For Header -->
 		<div class="container">
-
 			<div class="cbp-af-header">
 				<div class="cbp-af-inner">
 					<h1>Fixed</h1>
@@ -38,6 +38,7 @@
 					<a href="http://tympanus.net/codrops/category/blueprints/" class="bp-icon bp-icon-archive" data-info="Blueprints archive"><span>Go to the archive</span></a>
 				</nav>
 			</header>	
+			<!-- All this is just to fill up the space -->
 			<div class="main">
 				<section>
 					<div><p>Dreamcatcher american apparel typewriter polaroid, Pinterest hoodie tousled vegan pickled gastropub iPhone VHS sartorial. Fanny pack vinyl fingerstache whatever, raw denim Carles literally next level fashion axe photo booth pour-over Echo Park.</p></div>
